--- a/TP2/src/assets/css/index.css
+++ b/TP2/src/assets/css/index.css
@@ -1,3 +1,17 @@
 #chart-wrapper {
     /*overflow: scroll;*/
 }
+.tooltipao{
+    white-space:pre-wrap;
+}
+div.tooltip {	
+    position: absolute;			
+    text-align: left;			
+    width: 180px;										
+    padding: 5px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
