--- a/TP2/src/assets/css/index.css
+++ b/TP2/src/assets/css/index.css
@@ -1,9 +1,3 @@
-#chart-wrapper {
-    /*overflow: scroll;*/
-}
-.tooltipao{
-    white-space:pre-wrap;
-}
 div.tooltip {	
     position: absolute;			
     text-align: left;			
@@ -14,4 +8,7 @@ div.tooltip {
     border: 0px;		
     border-radius: 8px;			
     pointer-events: none;			
+}
+h1{
+    text-align: center;
 }
