INTERFACE QUASE LA
SRSRSRS

--- a/TP3/src/assets/css/page_base.css
+++ b/TP3/src/assets/css/page_base.css
@@ -1,8 +1,9 @@
 html, body {
 	margin: 0;
-	padding: 0;
-	width: 100%;
+	padding: 5px;
+	width: 1310px;
 	height: 100%; 
+
 }
 
 .background {
@@ -14,52 +15,43 @@ html, body {
 	padding: 0;
 }
 .content {
-	display: flex;
+	display: flexz;
+	height: 300px;
 }
 
 .tree_div {
 	width: 900px;
-	height: 600px;
+	height: 300px;
 	float: left; 
 }
 
 .top_right {
-	background-color: red;
+	position: relative;
+	float: right;
 	flex-grow: 1;
 }
-.bottom_block {
-	position: absolute;
-	width: 100%;
-	display: block;
-	bottom: 0; 
-}
 
-.left_block {
-	display: block;
+.bot_left {
+	width: 400px;
+	height: 200px;
 	float: left; 
 }
 
-.right_block {
-	display: block;
-	float: right; 
+.bot_right {
+	position: relative;
+	float: left;
+	flex-grow: 1;
 }
-
-.center_block {
-	display: block;
-	width: auto; 
-}
-
 .selection_type_div {
 	width: 100%;
 	height: 50px;
-	background-color: #9999ff;
 }
 
 
 
 .cresc_div {
-	width: 100%;
-	height: 176px;
+	width: 500px;
+	height: 250px;
 	background-color: #999966;
 }
 
