--- a/TP3/src/assets/css/page_base.css
+++ b/TP3/src/assets/css/page_base.css
@@ -16,12 +16,12 @@ html, body {
 }
 .content {
 	display: flexz;
-	height: 300px;
+	height: 500px;
 }
 
 .tree_div {
 	width: 900px;
-	height: 300px;
+	height: 500px;
 	float: left; 
 }
 
@@ -35,6 +35,7 @@ html, body {
 	width: 400px;
 	height: 200px;
 	float: left; 
+	margin-left: 18px;
 }
 
 .bot_right {
